# app-eai-agent

./: .gitignore  DISCORD_SETUP.md  Dockerfile  GEMINI.md  README.md  RESOURCES.md  alembic.ini  eai_gateway.md  eval.md  eval_migration.md  evals.md  evals_bq.md  experiment_report.md  front-migration.md  frontend.md  gunicorn_config.py  langgraph_plan.md  md_to_wpp.py  migration.md  output.json  output_processed.json  package-lock.json  precomputed_responses.json  processed_output.json  prompt.xml  pyproject.toml  test.py  test_edge_cases.py  test_md_to_wpp.py  test_session_final.py  test_session_id.py  test_time_between_messages.py  test_web_search_iptu.py
.github/workflows/: build-docker-eai-agent.yaml  build-docker-frontend.yaml  build-docker.yaml
alembic/: env.py
alembic/versions/: 0db81211808d_add_unified_versions_table_for_.py  9ff31683095d_remove_character_limit_from_reason_field.py  add_langgraph_memory_tables.py
docs/: DISCORD_IMPLEMENTATION.md  DISCORD_NOTIFICATIONS.md  DISCORD_THREAD_CONFIGURATION.md  IMPLEMENTATION_SUMMARY.md  KUBERNETES_DISCORD_SETUP.md  beta_group_remove.md
evaluation_results/: results_BatmanConversationalAgent_Eval_v2.json  results_BatmanEvaluationAgent.json  results_Batman_Unified_Conversation_Eval_v2.json  results_Batman_Unified_Eval_v1.json
k8s/prod/: resources.yaml
k8s/staging/: kustomization.yaml  letta.yaml  redis.yaml  resources.yaml
k8s/staging_frontend/: resources.yaml
src/: main.py
src/admin/: __init__.py  routes.py
src/api/: __init__.py
src/config/: env.py
src/db/: __init__.py  database.py
src/frontend/: Dockerfile  components.json  package-lock.json  package.json  tsconfig.json
src/models/: __init__.py  agent_config_model.py  memory_models.py  system_prompt_model.py  unified_version_model.py  user_agent_model.py
src/repositories/: __init__.py  agent_config_repository.py  system_prompt_repository.py  unified_version_repository.py  user_agent_repository.py
src/schemas/: agent_config_schema.py  discord_schema.py  letta.py  letta_schema.py  system_prompt_schema.py  unified_delete_schema.py  unified_history_schema.py  unified_reset_schema.py  webhook_schema.py
src/utils/: beta_group_insert.py  beta_group_remove.py  bigquery.py  delete_agent_version.py  eai_api.py  format_messages_gateway.py  gateway_format_messages.py  infisical.py  md_to_wpp.py  (+2 more)
(+492 files in other folders)
