[project]
name = "app-agentic-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "google-genai>=1.15.0",
    "letta-client>=0.1.143",
    "loguru>=0.7.3",
    "redis>=6.1.0",
    "taskipy>=1.14.1",
    "uvicorn>=0.34.2",
]

[tool.taskipy.tasks]
ngrok = "ngrok http --url=ideal-burro-barely.ngrok-free.app 8089"
serve = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8089 --log-level info"
